tests/__snapshots__/validation-target-wrong-option-value-type-stderr.snap.txt
Error: Value for the 'target' option must be a string.

  1 | {
  2 |   "target": [
    |             ~
  3 |     "latest"
    | ~~~~~~~~~~~~
  4 |   ],
    | ~~~
  5 |   "testFileMatch": [
  6 |     "examples/*.test.*"
  7 |   ]

      at ./tstyche.config.json:2:13

